fixed wormhole travel
